# handwritten-digits-recognition

./: Cargo.toml  first.mnistai  readme.md
src/: dataset.rs  draw.rs  main.rs  network.rs  training.rs  utils.rs
