[package]
name = "handwritten-digits-recognition"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable link-time optimization
strip = "symbols" # Strip debug symbols

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
rustflags = [
    "--clang-arg=--target=x86_64-w64-mingw32",
    "--clang-arg=-I/usr/x86_64-w64-mingw32/include",
]


[dependencies]
raylib = "5.5.1"
